# continuity-ai

./: .gitignore  LIFECYCLE_AUDIT_FAILURE.txt  README.md  pyproject.toml
desktop/: .gitignore  CURSOR_AUDIT_BRIEF.md  INTEGRATION_CHECKPOINT.md  PROJECT_REPORT_V3_PREPARATION.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  paths.rs
desktop/src-tauri/src/bridge/: mod.rs  process.rs  protocol.rs  test_support.rs
docs/: APPROVED_ONLY_WORKSPACE_V0.1.md  BRIDGE_PROCESS_CONTRACT_v0.1.md  BRIDGE_PROCESS_CONTRACT_v0.2.md  BUILD_LOG.md  CODEX_NATIVE_WORKSPACE_SPIKE.md  CODEX_VERTICAL_SKELETON_PROMPT.md  CODEX_VERTICAL_SKELETON_PROMPT_DRAFT.md  CONTRACT_FALSIFICATION_PROMPT.md  CURRENT_STATE.md  FABLE5_CONTRACT_CORRECTIONS_v0.1.md  GATE_G03_CLOSED_EVIDENCE_WORLD_ADDENDUM.md  GATE_G03_CONTRACT_v0.2.md  GATE_G03_DECISION_PROVENANCE_AND_HUMAN_LANGUAGE_ADDENDUM_v0.1.md  LOCAL_CODEX_SESSION_CONTROLLER_V0.1.md  PITCH_DRAFT.md  PROJECT_SOURCE_SCOPING_ARCHITECTURE_v0.1.md  PROJECT_SOURCE_SCOPING_BRIDGE_v0.1.md  PROJECT_SOURCE_SCOPING_CONTRACT_v0.1.md  SCOPE_AND_GROUND_TRUTH.md  SECURITY_AND_PROVENANCE_CONTRACT_v0.1.md  SEMANTIC_PROJECT_AND_DECISION_SCOPE_RESOLUTION_CONTRACT_v0.1.md  SKELETON_BUILD_PLAN.md  UNSEEN_WORKSPACE_GENERATOR_v0.1.md
scripts/: run_film_demo.ps1
tests/: test_acceptance_project_promise.py  test_audit_project_report_contract_v3.py  test_aurora_fixture.py  test_bridge_process.py  test_bridge_process_end_to_end.py  test_codex_session.py  test_codex_session_live.py  test_deterministic_offline_provider.py  test_ingestion.py  test_network_isolation.py  test_project_identity_and_report.py  test_project_report_contract.py  test_retained_analysis_persistence.py  test_vertical_skeleton.py
(+172 files in other folders)
