[project]
name = "continuity-ai"
version = "0.1.0"
description = "An evidence-grounded continuity layer for Project Aurora."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openpyxl>=3.1.5",
  "icalendar>=6.1.0",
  "pypdf>=5.0.0",
  "openai>=1.0.0",
  "cryptography>=49",
  "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-socket>=0.7.0",
]

[project.scripts]
continuity-ai = "continuity_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--disable-socket", "-m", "not live_network"]
markers = [
  "live_network: excluded from the default suite; requires explicit selection with -m live_network and socket opt-in with --force-enable-socket",
]
