[package]
name = "continuity-ai-desktop"
version = "0.1.0"
description = "Continuity AI desktop application"
authors = ["Continuity AI"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "continuity_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "=2.4.0"
